# Lobster

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  install.sh  pyproject.toml  setup.sh
.claude/agents/: brain-dumps.md
.githooks/: pre-commit
config/: config.env.example  consolidation.conf  hyperion.conf.example  lobster.conf.example  sync-config.example.json
deploy/: cloud-init.yaml
docker/: Dockerfile.dev  Dockerfile.worker  worker-entrypoint.sh
docs/: BRAIN-DUMPS.md  CUSTOMIZATION.md  GLOBAL-ENV.md
lobster-shop/: INDEX.md  README.md  SHOP-COMMAND-DESIGN.md
lobster-shop/camofox-browser/: skill.toml
lobster-shop/gcal-links/: skill.toml
lobster-shop/skill-template/: skill.toml
scheduled-tasks/: run-job.sh  sync-crontab.sh
scripts/: claude-persistent.sh  docker-worker.sh  health-check-v3.sh  lobster-env.sh  lobster-sync-daemon.sh  lobster-sync-repo.sh  nightly-consolidation.py  nightly-consolidation.sh  pre-push-security-scan.sh  start-lobster.sh  update-lobster.sh  upgrade.sh
services/: hyperion-claude.service  lobster-claude.service.template  lobster-mcp.service.template  lobster-observability.service  lobster-observability.service.template  lobster-router.service.template  lobster-slack-router.service.template  lobster-sms-router.service.template  lobster-whatsapp-router.service  lobster-whatsapp-router.service.template
src/: cli
src/agents/: tracker.py
src/bisque/: relay_server.py
src/bot/: lobster_bot.py  (+1 more)
tests/: conftest.py  test_lobster_sync.sh  test_user_model.py  test_vps_integration.py
(+40 files in other folders)
