[project]
name = "lobster"
version = "0.1.0"
description = "Always-on AI assistant with Telegram/Slack integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "sqlite-vec>=0.1.1",
    "fastembed>=0.3.0",
    "twilio>=9.0.0",
]

[project.optional-dependencies]
dashboard = [
    "websockets>=13.0",
]
browser = [
    "playwright>=1.40.0",
]
slack = [
    "slack-sdk>=3.27.0",
    "slack-bolt>=1.18.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
